--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.asteriskjava</groupId>
-        <artifactId>asterisk-java-parent</artifactId>
-        <version>4</version>
-    </parent>
+    <groupId>pl.thulium</groupId>
     <artifactId>asterisk-java</artifactId>
     <name>Asterisk-Java</name>
     <version>1.0.0.CI-SNAPSHOT</version>
@@ -42,6 +38,18 @@
         <connection>scm:git:git://github.com/srt/asterisk-java.git</connection>
         <developerConnection>scm:git:git@github.com:srt/asterisk-java.git</developerConnection>
     </scm>
+    <distributionManagement>
+        <repository>
+            <id>deployment</id>
+            <name>Internal Releases</name>
+            <url>http://jenkins:8081/nexus/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>deployment</id>
+            <name>Internal Releases</name>
+            <url>http://jenkins:8081/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
     <build>
         <plugins>
             <plugin>
